Add typescript to components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,25 @@
 {
   "compilerOptions": {
+    "jsx": "react-jsx" /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */,
+    "types": [
+      "react"
+    ] /* Type declaration files to be included in compilation. */,
+
+
+    "lib": [
+      "es5", "es6", "dom", "dom.iterable"
+    ],
+
+
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
@@ -25,7 +45,7 @@
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
 
     /* Modules */
-    "module": "commonjs",                                /* Specify what module code is generated. */
+    "module": "esNext",                                /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
