--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "^18.0.6",
     "chance": "^1.1.8",
     "cypress": "^10.7.0",
-    "jest": "^29.0.2",
+    "jest": "^29.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -45,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "ts-jest": "^29.0.0"
   }
 }
