--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
+    "@types/chance": "^1.1.3",
     "ts-jest": "^29.0.0"
   }
 }
