--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^18.7.16",
+    "@types/react": "^18.0.19",
+    "@types/react-dom": "^18.0.6",
     "chance": "^1.1.8",
     "cypress": "^10.7.0",
-    "jest": "^29.0.2",
+    "jest": "^29.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "typescript": "^4.8.3",
     "user-event": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -40,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/chance": "^1.1.3",
+    "ts-jest": "^29.0.0"
   }
 }
